# updatefy

./: .gitignore  README.md  pyproject.toml  requirements.txt
updatefy/: __main__.py  commands.py  datetime.py  log.py  notifications.py  updates.py
